--- a/index.html
+++ b/index.html
@@ -264,19 +264,6 @@
 				<a href="http://lattes.cnpq.br/6638998465337467" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
 				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
 			</div>
-			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px" alt="">
-				<h4>Daiane Rodrigues</h4>
-				<p>Computer Science</p>
-				<a href="http://lattes.cnpq.br/5393092020774315" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
-				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
-			</div>
-			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px" alt="">
-				<h4>Fernando Lunardelli </h4>
-				<p>Computer Science</p>				
-				<a href="http://lattes.cnpq.br/1304626499088222" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
-				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
-			</div>	
-
   		</div>
 		
   		<div class="row">
@@ -429,21 +416,23 @@
 			<li>Augusto Weiand (MSc Computer Science)</li>
 			<li>Caroline Q. Santos (PhD Computer Science)</li>
 			<li>Daniele Ramos de Souza (MSc Computer Science)</li>
+			<li>Daiane Rodrigues (MSc Computer Science)</li> <!-- Coloquei MSC Compsci por que removi ela desta lista -->
 			<li>Diego Goncalves (MSc Computer Science)</li>
 			<li>Eduardo Ghidini (MSc Computer Science)</li>
       		<li>Estelamaris Pellissari (MSc Computer Science)</li>
       		<li>Ezequiel Conceição Blasco (MSc Computer Science)</li>
       		<li>Felipe Eduardo Lammel (MSc Computer Science)</li>
+      		<li>Fernando Lunardelli</li> <!-- Coloquei MSC Compsci por que removi ele desta lista -->
       		<li>Francine Bülow Bergmann (MSc Computer Science)</li>
       		<li>Germano Duarte Mergel (MSc Computer Science)</li>
       		<li>Guilherme Spolavori dos Santos (MSc Computer Science)</li>
       		<li>Gustavo Baseggio das Virgens (MSc Computer Science)</li>
-			<li>Joana Scherer (MSc Computer Science)</li>		
       	</ul>
 		</div>
    
    	<div class="col-lg-6"> 
       	<ul class="under-list">
+			<li>Joana Scherer (MSc Computer Science)</li>
       		<li>João Pedro Dewes Guterres (MSc Computer Science)</li> 
 			<li>João Pedro Dewes Guterres (PhD Computer Science)</li>			
 			<li>Laura Krupp Engelmann (MSc Computer Science)</li>
