--- a/index.html
+++ b/index.html
@@ -218,19 +218,22 @@
 				<a href="http://lattes.cnpq.br/0107052607860572" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
 				<!--<a href="https://orcid.org/0000-0001-6829-1682" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
 			</div>
-			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px" alt="">
+
+			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/carmen-brezolin.jpg" height="120px" width="120px" alt="">
 				<h4>Carmem Vera Scorsatto Brezolin</h4>
 				<p>Computer Science</p>
 				<a href="http://lattes.cnpq.br/7488178065111498" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
 				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
 			</div>
-			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px" alt="">
+
+			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/claiton-correa.jpg" height="120px" width="120px" alt="">
 				<h4>Claiton Marques Correa</h4>
 				<p>Computer Science</p>
 				<a href="http://lattes.cnpq.br/0482651569409294" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
 				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
 			</div>
-			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px" alt="">
+
+			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/diego-rosa.jpg" height="120px" width="120px" alt="">
 				<h4>Diego Moreira da Rosa</h4>
 				<p>Computer Science</p>
 				<a href="http://lattes.cnpq.br/5223203729130766" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
@@ -243,6 +246,27 @@
 				<p>Computer Science</p>
 				<a href="http://lattes.cnpq.br/8142924835668161" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
 				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
+			</div>
+
+			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/pedro.jpg" height="120px" width="120px" alt="">
+				<h4>Pedro Henrique Morais Sanvido</h4>
+				<p>Computer Science</p>
+				<a href="http://lattes.cnpq.br/4620991860069572" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
+				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
+			</div>
+
+			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/murilo.jpg" height="120px" width="120px" alt="">
+				<h4>Murilo Santos Regio</h4>
+				<p>Computer Science</p>
+				<a href="http://lattes.cnpq.br/8763053989946119" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
+				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
+			</div>
+
+			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/andre-rollwagen.jpg" height="120px" width="120px" alt="">
+				<h4>André Fernando Rollwagen</h4>
+				<p>Computer Science</p>
+				<a href="http://lattes.cnpq.br/5550663694700332" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
+				<!-- <a href="https://orcid.org/0000-0002-1106-7222" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a> -->
 			</div>
 		</div>
 		
@@ -301,26 +325,15 @@
 				<a href="http://lattes.cnpq.br/3710602038494359" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
 				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
 			</div>
-			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/murilo.jpg" height="120px" width="120px" alt="">
-				<h4>Murilo Santos Regio</h4>
-				<p>Computer Science</p>
-				<a href="http://lattes.cnpq.br/8763053989946119" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
-				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
-			</div>
+
 			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px" alt="">
 				<h4>Patrick Vicente Garcia</h4>
 				<p>Computer Science</p>
 				<a href="http://lattes.cnpq.br/2848074397761789" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
 				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
-			</div>				
-			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/pedro.jpg" height="120px" width="120px" alt="">
-				<h4>Pedro Henrique Morais Sanvido</h4>
-				<p>Computer Science</p>
-				<a href="http://lattes.cnpq.br/4620991860069572" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
-				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
-			</div>	
-
+			</div>					
 		</div>
+
 		<div class="row">
 			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px" alt="">
 				<h4>Temis Machado de Medeiros</h4>
