update msc students

--- a/index.html
+++ b/index.html
@@ -282,60 +282,75 @@
 				<a href="http://lattes.cnpq.br/3820595820173661" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
 				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
 			</div>
-			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px" alt="">
+
+			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/arthur-rocha.jpg" height="120px" width="120px" alt="">
 				<h4>Arthur Henrique da Rocha</h4>
 				<p>Computer Science</p>
 				<a href="http://lattes.cnpq.br/6638998465337467" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
 				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
 			</div>
-  		</div>
 		
-  		<div class="row">
-			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px" alt="">
+			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/ivan-rocha.jpg" height="120px" width="120px" alt="">
 				<h4>Ivan Augusto Alves da Rocha </h4>
 				<p>Computer Science</p>				
 				<a href="http://lattes.cnpq.br/2274488165329797" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
 				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
 			</div>
+
 			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px" alt="">
 				<h4>Leandro de Oliveira Alfonso</h4>
 				<p>Computer Science</p>				
 				<a href="http://lattes.cnpq.br/2239313534605561" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
 				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
 			</div>
+  		<div>
+		
+  		<div class="row">
 			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/lorenzo.jpg" height="120px" width="120px" alt="">
 				<h4>Lorenzo Pooch</h4>
 				<p>Communication</p>
 				<a href=" http://lattes.cnpq.br/6658409950602716" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
 				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
 			</div>
-			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px" alt="">
+
+			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/lucas-ciocari.jpg" height="120px" width="120px" alt="">
 				<h4>Lucas Bertoglio Ciocari</h4>
 				<p>Computer Science</p>
 				<a href="http://lattes.cnpq.br/7019745132415809" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
 				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
 			</div>	
 
-		</div>
-		
-  		<div class="row">
-			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px" alt="">
+			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/mariana-borges.png" height="120px" width="120px" alt="">
 				<h4>Mariana Gomes Borges</h4>
 				<p>Computer Science</p>
 				<a href="http://lattes.cnpq.br/3710602038494359" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
 				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
 			</div>
 
-			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px" alt="">
+			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/patrick-garcia.jpg" height="120px" width="120px" alt="">
 				<h4>Patrick Vicente Garcia</h4>
 				<p>Computer Science</p>
 				<a href="http://lattes.cnpq.br/2848074397761789" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
 				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
-			</div>					
+			</div>
 		</div>
-
-		<div class="row">
+		
+  		<div class="row">
 			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px" alt="">
+				<h4>Cassiano Souza</h4>
+				<p>Computer Science</p>
+				<a href="#" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a> <!-- TODO: add lattes. talvez http://lattes.cnpq.br/5504458752405226 -->
+				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
+			</div>
+
+			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/gustavo-duarte.jpg" height="120px" width="120px" alt="">
+				<h4>Gustavo Hernandez Duarte</h4>
+				<p>Computer Science</p>
+				<a href="http://lattes.cnpq.br/4360784139683798" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
+				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
+			</div>
+			
+			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/temis-medeiros.jpg" height="120px" width="120px" alt="">
 				<h4>Temis Machado de Medeiros</h4>
 				<p>Computer Science</p>
 				<a href="http://lattes.cnpq.br/2606612044659179" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
