update undergraduate students

--- a/index.html
+++ b/index.html
@@ -361,31 +361,51 @@
        
     <div class="row space centered">
       <h2 class="centered">Undergraduate Students</h2>
-      <hr>
-	
-		
+      	<hr>
 		<div class="row">
-			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px" alt="">
-				<h4>Adilson Junior Alves Medronha</h4>
-				<p>Computer Science</p>
-				<a href="http://lattes.cnpq.br/6500538610852988" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
-				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
+			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/gustavo-nobrega.jpg" height="120px" width="120px" alt="">
+				<h4>Gustavo da Nóbrega Silva</h4>
+				<p>Data Science and Artificial Intelligence</p>
+				<a href="http://lattes.cnpq.br/1684549173097583" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
+				<!-- <a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a> -->
+				<a href="https://www.linkedin.com/in/gustavo-nsilva/" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Linkedin"><i class="fa fa-linkedin"></i></a>
 			</div>
-				<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px" alt="">
-				<h4>Arthur Henrique Henz </h4>
-				<p>Computer Science</p>
-				<a href="http://lattes.cnpq.br/8260414557622749" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
+
+			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/lucas-kumagai.JPG" height="120px" width="120px" alt="">
+				<h4>Lucas Yugi Kumagai</h4>
+				<p>Data Science and Artificial Intelligence</p>
+				<a href="http://lattes.cnpq.br/6738940516075216" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
 				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
+				<a href="https://www.linkedin.com/in/lucas-kumagai-237742219/" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Linkedin"><i class="fa fa-linkedin"></i></a>
 			</div>
-			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px" alt="">
-				<h4>Leonardo Gibrowski Faé </h4>
+
+			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/anderson-sprenger.jpg" height="120px" width="120px" alt="">
+				<h4>Anderson Renan Paniz Sprenger</h4>
 				<p>Computer Science</p>
-				<a href="http://lattes.cnpq.br/8387625672866611" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
+				<a href="http://lattes.cnpq.br/9695752186620200" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
+				<!-- <a href="https://orcid.org/0000-0002-7943-9686" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a> -->
+				<!-- <a href="https://github.com/andersprenger" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Github"><i class="fa fa-github"></i></a> -->
+				<a href="https://www.linkedin.com/in/andersonsprenger/" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+			</div>
+
+			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/gabriel-zurawski.JPG" height="120px" width="120px" alt="">
+				<h4>Gabriel Zurawski de Souza</h4>
+				<p>Computer Science</p>
+				<a href="http://lattes.cnpq.br/4420557659101957" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
 				<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
+				<a href="https://www.linkedin.com/in/gabriel-zurawski-de-souza-a1b19a284/" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Linkedin"><i class="fa fa-linkedin"></i></a>
 			</div>
 		</div>
 
-		
+		<div class="row">
+			<div class="col-lg-3 centered"> <img class="img img-circle" src="assets/img/team/vinicius-dias.jpg" height="120px" width="120px" alt="">
+				<h4>Vinícius Pereira Dias</h4>
+				<p>Computer Science</p>
+				<a href="#" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
+				<!-- <a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a> -->
+				<a href="https://www.linkedin.com/in/vin%C3%ADcius-pereira-dias-17a2aa265/" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+			</div>
+		</div>
     </div>
     
     <div class="row space centered">
