former graduate students centralization

--- a/index.html
+++ b/index.html
@@ -593,52 +593,56 @@
 			<h2 class="centered">Former Graduate Students</h2>
 			<hr />
 			<div class="col-lg-6">
-				<ul class="under-list">
-					<li>Alessandra Paz Milani (MSc Computer Science)</li>
-					<li>Ânderson Pinto Alves (MSc Computer Science)</li>
-					<li>André Luís dos Santos Eberhardt (MSc Computer Science)</li>
-					<li>Angelina C. Alvarez Ziesemer (PhD Computer Science)</li>
-					<li>Adriana Cássia da Costa (MSc Computer Science)</li>
-					<li>Andrei Garcia</li>
-					<li>Augusto Weiand (MSc Computer Science)</li>
-					<li>Caroline Q. Santos (PhD Computer Science)</li>
-					<li>Daniele Ramos de Souza (MSc Computer Science)</li>
-					<li>Daiane Rodrigues (MSc Computer Science)</li> <!-- Coloquei MSC Compsci por que removi ela desta lista -->
-					<li>Diego Goncalves (MSc Computer Science)</li>
-					<li>Eduardo Ghidini (MSc Computer Science)</li>
-					<li>Estelamaris Pellissari (MSc Computer Science)</li>
-					<li>Ezequiel Conceição Blasco (MSc Computer Science)</li>
-					<li>Felipe Eduardo Lammel (MSc Computer Science)</li>
-					<li>Fernando Lunardelli</li> <!-- Coloquei MSC Compsci por que removi ele desta lista -->
-					<li>Francine Bülow Bergmann (MSc Computer Science)</li>
-					<li>Germano Duarte Mergel (MSc Computer Science)</li>
-					<li>Guilherme Spolavori dos Santos (MSc Computer Science)</li>
-					<li>Gustavo Baseggio das Virgens (MSc Computer Science)</li>
-				</ul>
+				<div style="display: flex; justify-content: right;">
+					<ul class="under-list">
+						<li>Alessandra Paz Milani (MSc Computer Science)</li>
+						<li>Ânderson Pinto Alves (MSc Computer Science)</li>
+						<li>André Luís dos Santos Eberhardt (MSc Computer Science)</li>
+						<li>Angelina C. Alvarez Ziesemer (PhD Computer Science)</li>
+						<li>Adriana Cássia da Costa (MSc Computer Science)</li>
+						<li>Andrei Garcia</li>
+						<li>Augusto Weiand (MSc Computer Science)</li>
+						<li>Caroline Q. Santos (PhD Computer Science)</li>
+						<li>Daniele Ramos de Souza (MSc Computer Science)</li>
+						<li>Daiane Rodrigues (MSc Computer Science)</li> <!-- Coloquei MSC Compsci por que removi ela desta lista -->
+						<li>Diego Goncalves (MSc Computer Science)</li>
+						<li>Eduardo Ghidini (MSc Computer Science)</li>
+						<li>Estelamaris Pellissari (MSc Computer Science)</li>
+						<li>Ezequiel Conceição Blasco (MSc Computer Science)</li>
+						<li>Felipe Eduardo Lammel (MSc Computer Science)</li>
+						<li>Fernando Lunardelli</li> <!-- Coloquei MSC Compsci por que removi ele desta lista -->
+						<li>Francine Bülow Bergmann (MSc Computer Science)</li>
+						<li>Germano Duarte Mergel (MSc Computer Science)</li>
+						<li>Guilherme Spolavori dos Santos (MSc Computer Science)</li>
+						<li>Gustavo Baseggio das Virgens (MSc Computer Science)</li>
+					</ul>
+				</div>
 			</div>
 
 			<div class="col-lg-6">
-				<ul class="under-list">
-					<li>Joana Scherer (MSc Computer Science)</li>
-					<li>João Pedro Dewes Guterres (MSc Computer Science)</li>
-					<li>João Pedro Dewes Guterres (PhD Computer Science)</li>
-					<li>Laura Krupp Engelmann (MSc Computer Science)</li>
-					<li>Luana Müller (PhD Computer Science)</li>
-					<li>Letícia Lopes Leite (PhD Computer Science)</li>
-					<li>Luana Muller (MSc Computer Science)</li>
-					<li>Luciana da SIlveira Espíndola (PhD Computer Science)</li>
-					<li>Lucio Polese Cossio (MSc Computer Science)</li>
-					<li>Marcelo Cabral Ghilardi (MSc Computer Science)</li>
-					<li>Marcia Coelho Cardoso (MSc Computer Science)</li>
-					<li>Marcos Camponogara (MSc Computer Science)</li>
-					<li>Mateus Eugenio Colet (MSc Computer Science)</li>
-					<li>Mauro Francisco dos Santos Junior (MSc Computer Science)</li>
-					<li>Patrick Calvetti (MSc Computer Science)</li>
-					<li>Rodney Nogueira Jr. (MSc Computer Science)</li>
-					<li>Tiago Silva da Silva (PhD Computer Science)</li>
-					<li>Vivian Larréa Silveira (MSc Computer Science)</li>
-					<li>Wagner Signoretti (MSc Computer Science)</li>
-				</ul>
+				<div style="display: flex; justify-content: left;">
+					<ul class="under-list">
+						<li>Joana Scherer (MSc Computer Science)</li>
+						<li>João Pedro Dewes Guterres (MSc Computer Science)</li>
+						<li>João Pedro Dewes Guterres (PhD Computer Science)</li>
+						<li>Laura Krupp Engelmann (MSc Computer Science)</li>
+						<li>Luana Müller (PhD Computer Science)</li>
+						<li>Letícia Lopes Leite (PhD Computer Science)</li>
+						<li>Luana Muller (MSc Computer Science)</li>
+						<li>Luciana da SIlveira Espíndola (PhD Computer Science)</li>
+						<li>Lucio Polese Cossio (MSc Computer Science)</li>
+						<li>Marcelo Cabral Ghilardi (MSc Computer Science)</li>
+						<li>Marcia Coelho Cardoso (MSc Computer Science)</li>
+						<li>Marcos Camponogara (MSc Computer Science)</li>
+						<li>Mateus Eugenio Colet (MSc Computer Science)</li>
+						<li>Mauro Francisco dos Santos Junior (MSc Computer Science)</li>
+						<li>Patrick Calvetti (MSc Computer Science)</li>
+						<li>Rodney Nogueira Jr. (MSc Computer Science)</li>
+						<li>Tiago Silva da Silva (PhD Computer Science)</li>
+						<li>Vivian Larréa Silveira (MSc Computer Science)</li>
+						<li>Wagner Signoretti (MSc Computer Science)</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 		<!-- row -->
