fix unclosed html tag

--- a/index.html
+++ b/index.html
@@ -705,8 +705,11 @@
 		<div class="container">
 			<div class="row">
 
-				<div class="col-md-12"> <a href="http://www.pucrs.br/" target="blank_"><img class="img-responsive logo"
-							src="assets/img/pucrs.png" alt="PUCRS"> <span class="copyright">DaVInt &copy; 2021 </span>
+				<div class="col-md-12">
+					<a href="http://www.pucrs.br/" target="blank_">
+						<img class="img-responsive logo" src="assets/img/pucrs.png" alt="PUCRS">
+						<span class="copyright">DaVInt &copy; 2021 </span>
+					</a>
 				</div>
 
 				<!--<div class="col-md-4">
