rm gabriel photo (by his request)

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 					</div>
 
 					<div class="col-lg-3 centered">
-						<img class="img img-circle" src="assets/img/team/gabriel-zurawski.JPG" height="120px"
+						<img class="img img-circle" src="assets/img/team/team.jpg" height="120px"
 							width="120px" alt="">
 						<h4>Gabriel Zurawski de Souza</h4>
 						<p>Computer Science</p>
