--- a/index.html
+++ b/index.html
@@ -241,16 +241,6 @@
 				<hr />
 				<div class="row">
 					<div class="col-lg-3 centered">
-						<img class="img img-circle" src="assets/img/team/carlos-teixeira.jpg" height="120px"
-							width="120px" alt="">
-						<h4>Carlos Roberto G. Teixeira</h4>
-						<p>Communication</p>
-						<a href="http://lattes.cnpq.br/0107052607860572" target="_blank" data-toggle="tooltip"
-							data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
-						<!--<a href="https://orcid.org/0000-0001-6829-1682" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
-					</div>
-
-					<div class="col-lg-3 centered">
 						<img class="img img-circle" src="assets/img/team/carmen-brezolin.jpg" height="120px"
 							width="120px" alt="">
 						<h4>Carmem Vera Scorsatto Brezolin</h4>
@@ -368,15 +358,6 @@
 				</div>
 
 				<div class="row">
-					<div class="col-lg-3 centered">
-						<img class="img img-circle" src="assets/img/team/lorenzo.jpg" height="120px" width="120px"
-							alt="">
-						<h4>Lorenzo Pooch</h4>
-						<p>Communication</p>
-						<a href=" http://lattes.cnpq.br/6658409950602716" target="blank_" data-toggle="tooltip"
-							data-placement="bottom" title="Lattes"><i class="fa fa-file-text"></i></a>
-						<!--<a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a>-->
-					</div>
 
 					<div class="col-lg-3 centered">
 						<img class="img img-circle" src="assets/img/team/lucas-ciocari.jpg" height="120px" width="120px"
@@ -602,15 +583,16 @@
 						<li>Adriana Cássia da Costa (MSc Computer Science)</li>
 						<li>Andrei Garcia</li>
 						<li>Augusto Weiand (MSc Computer Science)</li>
+						<li>Carlos Roberto G. Teixeira (PhD Computer Science)</li>
 						<li>Caroline Q. Santos (PhD Computer Science)</li>
 						<li>Daniele Ramos de Souza (MSc Computer Science)</li>
-						<li>Daiane Rodrigues (MSc Computer Science)</li> <!-- Coloquei MSC Compsci por que removi ela desta lista -->
+						<li>Daiane Rodrigues (MSc Computer Science)</li>
 						<li>Diego Goncalves (MSc Computer Science)</li>
 						<li>Eduardo Ghidini (MSc Computer Science)</li>
 						<li>Estelamaris Pellissari (MSc Computer Science)</li>
 						<li>Ezequiel Conceição Blasco (MSc Computer Science)</li>
 						<li>Felipe Eduardo Lammel (MSc Computer Science)</li>
-						<li>Fernando Lunardelli</li> <!-- Coloquei MSC Compsci por que removi ele desta lista -->
+						<li>Fernando Lunardelli</li>
 						<li>Francine Bülow Bergmann (MSc Computer Science)</li>
 						<li>Germano Duarte Mergel (MSc Computer Science)</li>
 						<li>Guilherme Spolavori dos Santos (MSc Computer Science)</li>
@@ -626,6 +608,7 @@
 						<li>João Pedro Dewes Guterres (MSc Computer Science)</li>
 						<li>João Pedro Dewes Guterres (PhD Computer Science)</li>
 						<li>Laura Krupp Engelmann (MSc Computer Science)</li>
+						<li>Lorenzo Pooch (MSc Computer Science)</li>
 						<li>Luana Müller (PhD Computer Science)</li>
 						<li>Letícia Lopes Leite (PhD Computer Science)</li>
 						<li>Luana Muller (MSc Computer Science)</li>
