add undergraduate students

--- a/index.html
+++ b/index.html
@@ -469,6 +469,45 @@
 							data-toggle="tooltip" data-placement="bottom" title="Linkedin"><i
 								class="fa fa-linkedin"></i></a>
 					</div>
+
+					<div class="col-lg-3 centered">
+						<img class="img img-circle" src="assets/img/team/luiza-scaglia.jpg" height="120px" width="120px"
+							alt="">
+						<h4>Luiza Tropea Scaglia</h4>
+						<p>Computer Science</p>
+						<a href="http://lattes.cnpq.br/4391548551739880" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i
+								class="fa fa-file-text"></i></a>
+						<!-- <a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a> -->
+						<a href="https://www.linkedin.com/in/luiza-tropea-scaglia-61015b168/" target="blank_"
+							data-toggle="tooltip" data-placement="bottom" title="Linkedin"><i
+								class="fa fa-linkedin"></i></a>
+					</div>
+
+					<div class="col-lg-3 centered">
+						<img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px"
+							alt="">
+						<h4>Diana Silva Mesquita</h4>
+						<p>Audiovisual Production</p>
+						<a href="#" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i
+								class="fa fa-file-text"></i></a>
+						<!-- <a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a> -->
+						<a href="#" target="blank_"
+							data-toggle="tooltip" data-placement="bottom" title="Linkedin"><i
+								class="fa fa-linkedin"></i></a>
+					</div>
+
+					<div class="col-lg-3 centered">
+						<img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px"
+							alt="">
+						<h4>Laura Ashley Camaratta de Souza</h4>
+						<p>Communication Design</p>
+						<a href="#" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i
+								class="fa fa-file-text"></i></a>
+						<!-- <a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a> -->
+						<a href="#" target="blank_"
+							data-toggle="tooltip" data-placement="bottom" title="Linkedin"><i
+								class="fa fa-linkedin"></i></a>
+					</div>
 				</div>
 			</div>
 
