update former students

--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
 						<li>Estelamaris Pellissari (MSc Computer Science)</li>
 						<li>Ezequiel Conceição Blasco (MSc Computer Science)</li>
 						<li>Felipe Eduardo Lammel (MSc Computer Science)</li>
-						<li>Fernando Lunardelli</li>
+						<li>Fernando Lunardelli (MSc Computer Science)</li>
 						<li>Francine Bülow Bergmann (MSc Computer Science)</li>
 						<li>Germano Duarte Mergel (MSc Computer Science)</li>
 						<li>Guilherme Spolavori dos Santos (MSc Computer Science)</li>
