update famecos girls

--- a/index.html
+++ b/index.html
@@ -484,27 +484,27 @@
 					</div>
 
 					<div class="col-lg-3 centered">
-						<img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px"
+						<img class="img img-circle" src="assets/img/team/diana-mesquita.jpg" height="120px" width="120px"
 							alt="">
 						<h4>Diana Silva Mesquita</h4>
 						<p>Audiovisual Production</p>
-						<a href="#" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i
+						<a href="http://lattes.cnpq.br/1362909448581000" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i
 								class="fa fa-file-text"></i></a>
 						<!-- <a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a> -->
-						<a href="#" target="blank_"
+						<!-- <a href="#" target="blank_"
 							data-toggle="tooltip" data-placement="bottom" title="Linkedin"><i
-								class="fa fa-linkedin"></i></a>
+								class="fa fa-linkedin"></i></a> -->
 					</div>
 
 					<div class="col-lg-3 centered">
-						<img class="img img-circle" src="assets/img/team/team.jpg" height="120px" width="120px"
+						<img class="img img-circle" src="assets/img/team/laura-ashley.jpg" height="120px" width="120px"
 							alt="">
 						<h4>Laura Ashley Camaratta de Souza</h4>
 						<p>Communication Design</p>
-						<a href="#" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i
+						<a href="http://lattes.cnpq.br/0503432898190808" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i
 								class="fa fa-file-text"></i></a>
 						<!-- <a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a> -->
-						<a href="#" target="blank_"
+						<a href="https://www.linkedin.com/in/lauraashley2001/" target="blank_"
 							data-toggle="tooltip" data-placement="bottom" title="Linkedin"><i
 								class="fa fa-linkedin"></i></a>
 					</div>
