--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
 						<img class="img img-circle" src="assets/img/team/laura-ashley.jpg" height="120px" width="120px"
 							alt="">
 						<h4>Laura Ashley Camaratta de Souza</h4>
-						<p>Communication Design</p>
+						<p>Design</p>
 						<a href="http://lattes.cnpq.br/0503432898190808" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i
 								class="fa fa-file-text"></i></a>
 						<!-- <a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a> -->
