--- a/index.html
+++ b/index.html
@@ -458,6 +458,19 @@
 
 				<div class="row">
 					<div class="col-lg-3 centered">
+						<img class="img img-circle" src="assets/img/team/gustavo-silva.jpeg" height="120px" width="120px"
+							alt="">
+						<h4>Gustavo Willian Martins da Silva</h4>
+						<p>Computer Science</p>
+						<a href="https://lattes.cnpq.br/2771346850216709" target="blank_" data-toggle="tooltip" data-placement="bottom" title="Lattes"><i
+								class="fa fa-file-text"></i></a>
+						<!-- <a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Orcid"><i class="fa fa-sitemap"></i></a> -->
+						<!-- <a href="#" target="blank_"
+							data-toggle="tooltip" data-placement="bottom" title="Linkedin"><i
+								class="fa fa-linkedin"></i></a> -->
+					</div>
+
+					<div class="col-lg-3 centered">
 						<img class="img img-circle" src="assets/img/team/luiza-scaglia.jpg" height="120px" width="120px"
 							alt="">
 						<h4>Luiza Tropea Scaglia</h4>
@@ -495,7 +508,9 @@
 							data-toggle="tooltip" data-placement="bottom" title="Linkedin"><i
 								class="fa fa-linkedin"></i></a> -->
 					</div>
+				</div>
 
+				<div class="row">
 					<div class="col-lg-3 centered">
 						<img class="img img-circle" src="assets/img/team/laura-ashley.jpg" height="120px" width="120px"
 							alt="">
